# VoxelRaster

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  Sect.cpp  Sect.h  build.sh  fragShader.glsl  main.cpp  run.sh  userInput.cpp  userInput.h  vertShader.glsl
src/Shapes/: CMakeLists.txt  Cube.h  Obj.cpp  Obj.h  Pyramid.cpp  Pyramid.h  Shape.cpp  Shape.h
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.h  testUtils.cpp  testUtils.h
